Changes in file to resolve bug in Travis. #1

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,5 @@ notifications:
   email:
     recipients:
       - cris.mtxz@gmail.com
-install:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-  -
+script:
+  - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
