Changed lines in file to resolve bug maven in Travis. #1

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ notifications:
       - cris.mtxz@gmail.com
 
 install:
-  - mvn -N io.takari:maven:wrapper
-  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
   - mvn verify
