--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,10 @@ install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
   - mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=crismartin -Dsonar.login=$SONAR
+
+deploy:
+  provider: heroku
+  api_key: $HEROKU
+  on:
+    branch: master
+  app: iwvg-devops-cristian-martinez
